// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComboBox > should match its default snapshot 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for grouped options 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for optionType="a" 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for optionType="custom" 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="select" (multiple) 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <div class="flex flex-row flex-wrap rounded-t-sm gap-1 p-2 mr-auto justify-start w-full bg-gray-25 dark:bg-gray-950">
      <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-xs leading-4 h-6 pl-2 pr-0 grow-0" data-readonly="false">
        <div class="flex flex-row flex-nowrap items-center gap-x-0.5">
          <!--v-if-->
          <!--v-if--><span class=""><!-- @slot Label content. -->Apple</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-[1.375rem] w-6"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
              <path d="M11.5156 10.9844C11.8203 11.2656 11.8203 11.7578 11.5156 12.0391C11.375 12.1797 11.1875 12.25 11 12.25C10.7891 12.25 10.6016 12.1797 10.4609 12.0391L8 9.57812L5.51562 12.0391C5.375 12.1797 5.1875 12.25 5 12.25C4.78906 12.25 4.60156 12.1797 4.46094 12.0391C4.15625 11.7578 4.15625 11.2656 4.46094 10.9844L6.92188 8.5L4.46094 6.03906C4.15625 5.75781 4.15625 5.26562 4.46094 4.98438C4.74219 4.67969 5.23438 4.67969 5.51562 4.98438L8 7.44531L10.4609 4.98438C10.7422 4.67969 11.2344 4.67969 11.5156 4.98438C11.8203 5.26562 11.8203 5.75781 11.5156 6.03906L9.05469 8.52344L11.5156 10.9844Z" fill="currentColor"></path>
            </svg><span class="sr-only">Remove</span></button>
        </div>
      </div>
      <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-xs leading-4 h-6 pl-2 pr-0 grow-0" data-readonly="false">
        <div class="flex flex-row flex-nowrap items-center gap-x-0.5">
          <!--v-if-->
          <!--v-if--><span class=""><!-- @slot Label content. -->Banana</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-[1.375rem] w-6"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
              <path d="M11.5156 10.9844C11.8203 11.2656 11.8203 11.7578 11.5156 12.0391C11.375 12.1797 11.1875 12.25 11 12.25C10.7891 12.25 10.6016 12.1797 10.4609 12.0391L8 9.57812L5.51562 12.0391C5.375 12.1797 5.1875 12.25 5 12.25C4.78906 12.25 4.60156 12.1797 4.46094 12.0391C4.15625 11.7578 4.15625 11.2656 4.46094 10.9844L6.92188 8.5L4.46094 6.03906C4.15625 5.75781 4.15625 5.26562 4.46094 4.98438C4.74219 4.67969 5.23438 4.67969 5.51562 4.98438L8 7.44531L10.4609 4.98438C10.7422 4.67969 11.2344 4.67969 11.5156 4.98438C11.8203 5.26562 11.8203 5.75781 11.5156 6.03906L9.05469 8.52344L11.5156 10.9844Z" fill="currentColor"></path>
            </svg><span class="sr-only">Remove</span></button>
        </div>
      </div>
    </div>
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" multiple="" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value=""><button tabindex="-1" type="button" class="btn-sm my-auto py-0 ml-auto btn text-gray-500 hover:text-gray-900 dark:hover:text-gray-100 px-3"><span class="sr-only">Clear query</span><svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="w-5 h-5" aria-hidden="true">
          <path d="M6 18L18 6M6 6l12 12"></path>
        </svg></button>
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="select" (single) 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="taggable-select" (multiple) 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <div class="flex flex-row flex-wrap rounded-t-sm gap-1 p-2 mr-auto justify-start w-full bg-gray-25 dark:bg-gray-950">
      <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-xs leading-4 h-6 pl-2 pr-0 grow-0" data-readonly="false">
        <div class="flex flex-row flex-nowrap items-center gap-x-0.5">
          <!--v-if-->
          <!--v-if--><span class=""><!-- @slot Label content. -->Apple</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-[1.375rem] w-6"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
              <path d="M11.5156 10.9844C11.8203 11.2656 11.8203 11.7578 11.5156 12.0391C11.375 12.1797 11.1875 12.25 11 12.25C10.7891 12.25 10.6016 12.1797 10.4609 12.0391L8 9.57812L5.51562 12.0391C5.375 12.1797 5.1875 12.25 5 12.25C4.78906 12.25 4.60156 12.1797 4.46094 12.0391C4.15625 11.7578 4.15625 11.2656 4.46094 10.9844L6.92188 8.5L4.46094 6.03906C4.15625 5.75781 4.15625 5.26562 4.46094 4.98438C4.74219 4.67969 5.23438 4.67969 5.51562 4.98438L8 7.44531L10.4609 4.98438C10.7422 4.67969 11.2344 4.67969 11.5156 4.98438C11.8203 5.26562 11.8203 5.75781 11.5156 6.03906L9.05469 8.52344L11.5156 10.9844Z" fill="currentColor"></path>
            </svg><span class="sr-only">Remove</span></button>
        </div>
      </div>
      <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-xs leading-4 h-6 pl-2 pr-0 grow-0" data-readonly="false">
        <div class="flex flex-row flex-nowrap items-center gap-x-0.5">
          <!--v-if-->
          <!--v-if--><span class=""><!-- @slot Label content. -->Banana</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-[1.375rem] w-6"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
              <path d="M11.5156 10.9844C11.8203 11.2656 11.8203 11.7578 11.5156 12.0391C11.375 12.1797 11.1875 12.25 11 12.25C10.7891 12.25 10.6016 12.1797 10.4609 12.0391L8 9.57812L5.51562 12.0391C5.375 12.1797 5.1875 12.25 5 12.25C4.78906 12.25 4.60156 12.1797 4.46094 12.0391C4.15625 11.7578 4.15625 11.2656 4.46094 10.9844L6.92188 8.5L4.46094 6.03906C4.15625 5.75781 4.15625 5.26562 4.46094 4.98438C4.74219 4.67969 5.23438 4.67969 5.51562 4.98438L8 7.44531L10.4609 4.98438C10.7422 4.67969 11.2344 4.67969 11.5156 4.98438C11.8203 5.26562 11.8203 5.75781 11.5156 6.03906L9.05469 8.52344L11.5156 10.9844Z" fill="currentColor"></path>
            </svg><span class="sr-only">Remove</span></button>
        </div>
      </div>
    </div>
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" multiple="" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value=""><button tabindex="-1" type="button" class="btn-sm my-auto py-0 ml-auto btn text-gray-500 hover:text-gray-900 dark:hover:text-gray-100 px-3"><span class="sr-only">Clear query</span><svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="w-5 h-5" aria-hidden="true">
          <path d="M6 18L18 6M6 6l12 12"></path>
        </svg></button>
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="taggable-select" (single) 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when autofocus is true 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when disabled 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col disabled">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" disabled="" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when loading 1`] = `
"<div data-id="sds-combo-box" class="relative" loading="true">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot with clearable (showClearButton) 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div><span class="input-group-addon absolute z-0 py-2 left-8">Apple</span><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 opacity-0 pl-10 absolute block left-0 w-[calc(100%-4rem)]" value="Apple"><button tabindex="-1" type="button" class="btn-sm my-auto py-0 ml-auto btn text-gray-500 hover:text-gray-900 dark:hover:text-gray-100 px-3"><span class="sr-only">Clear query</span><svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" class="w-5 h-5" aria-hidden="true">
          <path d="M6 18L18 6M6 6l12 12"></path>
        </svg></button>
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot with custom value/label keys 1`] = `
"<div data-id="sds-combo-box" class="relative">
  <div class="input-group flex flex-col">
    <!--v-if-->
    <div class="flex flex-row h-10">
      <div class="input-group-addon absolute z-0 py-3"><span class="sr-only">Combo box</span><svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4">
          <path fill="currentColor" d="M368 208A160 160 0 1 0 48 208a160 160 0 1 0 320 0zM337.1 371.1C301.7 399.2 256.8 416 208 416C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208c0 48.8-16.8 93.7-44.9 129.1L505 471c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L337.1 371.1z"></path>
        </svg></div>
      <!--v-if--><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control border-none focus-visible:ring-0 z-1 pl-10" value="">
      <!--v-if-->
      <!--v-if-->
      <!-- @slot Default content. Good for adding content to the end of the input group -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;
